@@ -94,27 +94,31 @@ endif ()
 find_package (PkgConfig REQUIRED)
 
 # Check for ALSA libraries.
-pkg_check_modules (ALSA alsa)
-set (CONFIG_ALSA_MIDI ${ALSA_FOUND})
 if (CONFIG_ALSA_MIDI)
-  include_directories (${ALSA_INCLUDE_DIRS})
-  link_directories (${ALSA_LIBRARY_DIRS})
-  link_libraries (${ALSA_LIBRARIES})
-# set (CMAKE_REQUIRED_LIBRARIES "${ALSA_LIBRARIES};${CMAKE_REQUIRED_LIBRARIES}")
-else ()
-  message (WARNING "*** ALSA library not found.")
+  pkg_check_modules (ALSA alsa)
+  if (ALSA_FOUND)
+    include_directories (${ALSA_INCLUDE_DIRS})
+    link_directories (${ALSA_LIBRARY_DIRS})
+    link_libraries (${ALSA_LIBRARIES})
+  # set (CMAKE_REQUIRED_LIBRARIES "${ALSA_LIBRARIES};${CMAKE_REQUIRED_LIBRARIES}")
+  else ()
+    message (WARNING "*** ALSA library not found.")
+    set (CONFIG_ALSA_MIDI 0)
+  endif ()
 endif ()
 
 # Check for JACK libraries.
-pkg_check_modules (JACK jack>=0.100.0)
-set (CONFIG_JACK_MIDI ${JACK_FOUND})
 if (CONFIG_JACK_MIDI)
-  include_directories (${JACK_INCLUDE_DIRS})
-  link_directories (${JACK_LIBRARY_DIRS})
-  link_libraries (${JACK_LIBRARIES})
-# set (CMAKE_REQUIRED_LIBRARIES "${JACK_LIBRARIES};${CMAKE_REQUIRED_LIBRARIES}")
-else ()
-  message (WARNING "*** JACK library not found.")
+  pkg_check_modules (JACK jack>=0.100.0)
+  if (JACK_FOUND)
+    include_directories (${JACK_INCLUDE_DIRS})
+    link_directories (${JACK_LIBRARY_DIRS})
+    link_libraries (${JACK_LIBRARIES})
+  # set (CMAKE_REQUIRED_LIBRARIES "${JACK_LIBRARIES};${CMAKE_REQUIRED_LIBRARIES}")
+  else ()
+    message (WARNING "*** JACK library not found.")
+    set (CONFIG_JACK_MIDI 0)
+  endif ()
 endif ()
 
 
